[gd_scene load_steps=19 format=3 uid="uid://bs0vbk51aktea"]

[ext_resource type="Script" path="res://Scripts/Tonder.gd" id="1_6epdp"]
[ext_resource type="FontFile" uid="uid://yx8eo66u0ce3" path="res://pixel-comic-sans-undertale-sans-font.ttf" id="2_cblaq"]
[ext_resource type="Texture2D" uid="uid://i3m8isrhx6gk" path="res://Art/TonderBG.png" id="2_mylp5"]
[ext_resource type="Texture2D" uid="uid://dn0kg7pour2nt" path="res://Art/button_att.png" id="3_i0d0m"]
[ext_resource type="Texture2D" uid="uid://bp00625gpgq8a" path="res://Art/button_mag.png" id="4_pp6nw"]
[ext_resource type="Texture2D" uid="uid://k5mi1k0ummvb" path="res://Art/mr_van_tonderangry.png" id="5_dfjdl"]
[ext_resource type="Texture2D" uid="uid://bevfmmcra5nck" path="res://Art/button_hea.png" id="5_h70yb"]
[ext_resource type="Texture2D" uid="uid://ufa7xr0no61d" path="res://Art/van_tonderhappy.png" id="5_hg5wd"]
[ext_resource type="Texture2D" uid="uid://bqcm8ibb1iyi0" path="res://Art/button_run.png" id="6_pkmk5"]
[ext_resource type="Texture2D" uid="uid://qm30p4vxdxbn" path="res://Art/placeholder_student_battleicon.png" id="7_8psbm"]
[ext_resource type="Texture2D" uid="uid://b251cv06squc4" path="res://Art/button_thr.png" id="7_f1why"]
[ext_resource type="Texture2D" uid="uid://d0goa625vckwf" path="res://Art/van_tonder.png" id="8_5dhah"]
[ext_resource type="Texture2D" uid="uid://2eotmj1n7h24" path="res://Art/button_sma.png" id="8_fpos5"]
[ext_resource type="Texture2D" uid="uid://ddemsdbmlqxnd" path="res://Art/back.png" id="11_da7o2"]
[ext_resource type="Texture2D" uid="uid://bqdyp38w5mcqg" path="res://Art/gui_health.png" id="13_5l54k"]
[ext_resource type="Texture2D" uid="uid://dpevno03iqvuo" path="res://Art/gui_mana.png" id="14_644q7"]
[ext_resource type="Texture2D" uid="uid://bi2hiv412o068" path="res://Art/gui_textbox.png" id="15_ij60i"]
[ext_resource type="AudioStream" uid="uid://cerht7pthujyf" path="res://Music/mrvantonder_theme.mp3" id="18_dc5yr"]

[node name="Node" type="Node"]
script = ExtResource("1_6epdp")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 3.0
offset_top = 4.0
offset_right = 1923.0
offset_bottom = 1084.0
texture = ExtResource("2_mylp5")
expand_mode = 1

[node name="Tonder" type="TextureRect" parent="."]
offset_left = 1635.0
offset_top = 800.0
offset_right = 1976.0
offset_bottom = 1068.0
texture = ExtResource("8_5dhah")
expand_mode = 3
stretch_mode = 4

[node name="EnemyDisplay" type="Label" parent="."]
offset_left = 574.0
offset_top = 26.0
offset_right = 982.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_cblaq")
theme_override_font_sizes/font_size = 76
text = "Wuhoh"

[node name="VanAngry" type="TextureRect" parent="."]
visible = false
offset_left = 546.0
offset_top = -150.0
offset_right = 1913.0
offset_bottom = 1055.0
texture = ExtResource("5_dfjdl")
expand_mode = 1
stretch_mode = 4

[node name="VanHappy" type="TextureRect" parent="."]
offset_left = 546.0
offset_top = -150.0
offset_right = 1913.0
offset_bottom = 1055.0
texture = ExtResource("5_hg5wd")
expand_mode = 1
stretch_mode = 4

[node name="Attack" type="TextureButton" parent="."]
offset_left = 361.0
offset_top = 667.0
offset_right = 1552.0
offset_bottom = 857.0
texture_normal = ExtResource("3_i0d0m")
stretch_mode = 5

[node name="Magic" type="TextureButton" parent="."]
offset_left = 364.0
offset_top = 878.0
offset_right = 1549.0
offset_bottom = 1068.0
texture_normal = ExtResource("4_pp6nw")
stretch_mode = 5

[node name="Heal" type="TextureButton" parent="."]
visible = false
offset_left = 562.0
offset_top = 667.0
offset_right = 942.0
offset_bottom = 857.0
texture_normal = ExtResource("5_h70yb")
stretch_mode = 4

[node name="Sp1" type="TextureButton" parent="."]
visible = false
offset_left = 967.0
offset_top = 667.0
offset_right = 1347.0
offset_bottom = 857.0
texture_normal = ExtResource("7_f1why")
stretch_mode = 4

[node name="Sp2" type="TextureButton" parent="."]
visible = false
offset_left = 562.0
offset_top = 878.0
offset_right = 942.0
offset_bottom = 1068.0
texture_normal = ExtResource("8_fpos5")
stretch_mode = 4

[node name="Back" type="TextureButton" parent="."]
visible = false
offset_left = 1181.0
offset_top = 878.0
offset_right = 1436.0
offset_bottom = 1068.0
texture_normal = ExtResource("11_da7o2")
stretch_mode = 4

[node name="Run" type="TextureButton" parent="."]
visible = false
offset_left = 967.0
offset_top = 878.0
offset_right = 1193.0
offset_bottom = 1068.0
texture_normal = ExtResource("6_pkmk5")
stretch_mode = 4

[node name="Health" type="TextureRect" parent="."]
offset_left = 18.0
offset_top = 805.0
offset_right = 247.0
offset_bottom = 917.0
texture = ExtResource("13_5l54k")
stretch_mode = 4

[node name="mana" type="TextureRect" parent="."]
offset_left = 17.0
offset_top = 931.0
offset_right = 246.0
offset_bottom = 1043.0
texture = ExtResource("14_644q7")
stretch_mode = 4

[node name="Etextbox" type="TextureRect" parent="."]
offset_left = 1376.0
offset_top = 17.0
offset_right = 1895.0
offset_bottom = 787.0
texture = ExtResource("15_ij60i")

[node name="Ptextbox" type="TextureRect" parent="."]
offset_left = 25.0
offset_top = 17.0
offset_right = 544.0
offset_bottom = 787.0
texture = ExtResource("15_ij60i")

[node name="JohnACG2" type="TextureRect" parent="."]
offset_left = 246.0
offset_top = 795.0
offset_right = 544.0
offset_bottom = 1076.0
texture = ExtResource("7_8psbm")

[node name="Log" type="Label" parent="."]
offset_left = 54.0
offset_top = 44.0
offset_right = 509.0
offset_bottom = 753.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_cblaq")
theme_override_font_sizes/font_size = 50

[node name="ELog" type="Label" parent="."]
offset_left = 1401.0
offset_top = 44.0
offset_right = 1877.0
offset_bottom = 756.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_cblaq")
theme_override_font_sizes/font_size = 30

[node name="Mana" type="Label" parent="."]
offset_left = 150.0
offset_top = 960.0
offset_right = 207.0
offset_bottom = 1030.0
theme_override_fonts/font = ExtResource("2_cblaq")
theme_override_font_sizes/font_size = 60

[node name="HP" type="Label" parent="."]
offset_left = 140.0
offset_top = 840.0
offset_right = 223.0
offset_bottom = 888.0
theme_override_fonts/font = ExtResource("2_cblaq")
theme_override_font_sizes/font_size = 50

[node name="EHealth" type="TextureRect" parent="."]
offset_left = 1361.0
offset_top = 867.0
offset_right = 1621.0
offset_bottom = 1008.0
texture = ExtResource("13_5l54k")
stretch_mode = 4

[node name="EHP" type="Label" parent="."]
offset_left = 1499.0
offset_top = 907.0
offset_right = 1582.0
offset_bottom = 965.0
theme_override_fonts/font = ExtResource("2_cblaq")
theme_override_font_sizes/font_size = 50

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("18_dc5yr")
autoplay = true

[connection signal="pressed" from="Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="Heal" to="." method="_on_heal_pressed"]
[connection signal="pressed" from="Sp1" to="." method="_on_sp_1_pressed"]
[connection signal="pressed" from="Sp2" to="." method="_on_sp_2_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Run" to="." method="_on_run_pressed"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
